[package]
name = "varf"
version = "0.1.2"
authors = ["Alexandre Bury <alexandre.bury@gmail.com>"]

[dependencies]
toml = "0.1"
xdg-basedir = "*"
getopts = "*"
iron = "*"
router = "*"
mount = "*"
staticfile = "*"
rustc-serialize = "0.3"

[dependencies.handlebars-iron]
git = "https://github.com/sunng87/handlebars-iron"

[dependencies.urlencoded]
git = "https://github.com/iron/urlencoded"
