[package]
name = "varf"
version = "0.1.2"
authors = ["Alexandre Bury <alexandre.bury@gmail.com>","Samuel Humeau <sam@diffbot.com>"]

[dependencies]
toml = "*"
xdg-basedir = "*"
getopts = "*"
iron = "*"
router = "*"
mount = "*"
rustc-serialize = "0.3"
staticfile = "*"
urlencoded = "*"
handlebars-iron = "*"
